Update website with cleaning services and blog content

--- a/blog.html
+++ b/blog.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Professional Cleaning Tips & Health Blog | CleanSpace Expert Guides</title>
-    <meta name="description" content="Expert cleaning tips, health advice, and professional guides from CleanSpace. Learn about asthma-friendly cleaning, pest prevention, drain maintenance, and more.">
+    <title>Professional Cleaning Tips & Health Blog | Pristine & Clean Expert Guides</title>
+    <meta name="description" content="Expert cleaning tips, health advice, and professional guides from Pristine & Clean. Learn about asthma-friendly cleaning, pest prevention, drain maintenance, and more.">
     <meta name="keywords" content="cleaning tips, house cleaning blog, professional cleaning advice, health cleaning tips, home maintenance, asthma cleaning, pest prevention">
-    <meta name="author" content="CleanSpace Cleaning Services">
+    <meta name="author" content="Pristine & Clean Cleaning Services">
     <meta property="og:title" content="Professional Cleaning Tips & Health Blog">
     <meta property="og:description" content="Expert advice on maintaining a clean, healthy home environment for you and your family">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://cleanspace.com/blog.html">
+    <meta property="og:url" content="https://pristineandclean.com/blog.html">
     <meta property="og:image" content="https://images.unsplash.com/photo-1584464491033-06628f3a6b7b?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80">
-    <link rel="canonical" href="https://cleanspace.com/blog.html">
+    <link rel="canonical" href="https://pristineandclean.com/blog.html">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -20,15 +20,15 @@
     {
       "@context": "https://schema.org",
       "@type": "Blog",
-      "name": "CleanSpace Cleaning Tips & Health Blog",
-      "description": "Expert cleaning tips, health advice, and professional guides from CleanSpace cleaning professionals.",
-      "url": "https://cleanspace.com/blog.html",
+      "name": "Pristine & Clean Cleaning Tips & Health Blog",
+      "description": "Expert cleaning tips, health advice, and professional guides from Pristine & Clean cleaning professionals.",
+      "url": "https://pristineandclean.com/blog.html",
       "publisher": {
         "@type": "Organization",
-        "name": "CleanSpace",
+        "name": "Pristine & Clean",
         "logo": {
           "@type": "ImageObject",
-          "url": "https://cleanspace.com/logo.png"
+          "url": "https://pristineandclean.com/logo.png"
         }
       },
       "mainEntity": {
@@ -37,13 +37,13 @@
           {
             "@type": "BlogPosting",
             "position": 1,
-            "url": "https://cleanspace.com/blog-asthma-cleaning.html",
+            "url": "https://pristineandclean.com/blog-asthma-cleaning.html",
             "headline": "Essential Cleaning Tips for Asthma Sufferers"
           },
           {
             "@type": "BlogPosting", 
             "position": 2,
-            "url": "https://cleanspace.com/blog-pest-prevention.html",
+            "url": "https://pristineandclean.com/blog-pest-prevention.html",
             "headline": "How Dirty Homes Attract Insects and Pests"
           }
         ]
@@ -67,7 +67,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <h2><a href="index.html">CleanSpace</a></h2>
+                <h2><a href="index.html">Pristine & Clean</a></h2>
             </div>
             
             <!-- Burger Menu -->
@@ -379,7 +379,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>CleanSpace</h3>
+                    <h3>Pristine & Clean</h3>
                     <p>Professional home cleaning services you can trust. Making homes sparkle since 2014.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -412,17 +412,22 @@
                     <h4>Contact</h4>
                     <ul>
                         <li><i class="fas fa-phone"></i> (555) 123-4567</li>
-                        <li><i class="fas fa-envelope"></i> info@cleanspace.com</li>
+                        <li><i class="fas fa-envelope"></i> info@pristineandclean.com</li>
                         <li><i class="fas fa-map-marker-alt"></i> 123 Clean St, City, State 12345</li>
                     </ul>
                 </div>
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2024 CleanSpace. All rights reserved.</p>
+                <p>&copy; 2024 Pristine & Clean. All rights reserved.</p>
             </div>
         </div>
     </footer>
+
+    <!-- Theme Switcher -->
+    <div id="theme-switcher" class="theme-switcher" title="Switch Color Theme">
+        <i class="fas fa-palette"></i>
+    </div>
 
     <script src="script.js"></script>
 </body>
