--- a/deep-cleaning.html
+++ b/deep-cleaning.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deep Cleaning - CleanSpace Professional Home Cleaning</title>
+    <title>Deep Cleaning - Pristine & Clean Professional Home Cleaning</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -24,7 +24,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <h2><a href="index.html">CleanSpace</a></h2>
+                <h2><a href="index.html">Pristine & Clean</a></h2>
             </div>
             
             <!-- Burger Menu -->
@@ -290,7 +290,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>CleanSpace</h3>
+                    <h3>Pristine & Clean</h3>
                     <p>Professional home cleaning services you can trust. Making homes sparkle since 2014.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -313,7 +313,7 @@
                     <h4>Contact</h4>
                     <ul>
                         <li><i class="fas fa-phone"></i> (555) 123-4567</li>
-                        <li><i class="fas fa-envelope"></i> info@cleanspace.com</li>
+                        <li><i class="fas fa-envelope"></i> info@pristineandclean.com</li>
                         <li><i class="fas fa-map-marker-alt"></i> 123 Clean St, City, State 12345</li>
                     </ul>
                 </div>
@@ -330,10 +330,15 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2024 CleanSpace. All rights reserved.</p>
+                <p>&copy; 2024 Pristine & Clean. All rights reserved.</p>
             </div>
         </div>
     </footer>
+
+    <!-- Theme Switcher -->
+    <div id="theme-switcher" class="theme-switcher" title="Switch Color Theme">
+        <i class="fas fa-palette"></i>
+    </div>
 
     <script src="script.js"></script>
 </body>
