--- a/vacation-rental-cleaning.html
+++ b/vacation-rental-cleaning.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vacation Rental Cleaning - CleanSpace Professional Home Cleaning</title>
+    <title>Vacation Rental Cleaning - Pristine & Clean Professional Home Cleaning</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -24,7 +24,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <h2><a href="index.html">CleanSpace</a></h2>
+                <h2><a href="index.html">Pristine & Clean</a></h2>
             </div>
             
             <!-- Burger Menu -->
@@ -253,7 +253,7 @@
 
             <!-- Why Choose Us for Rentals -->
             <div class="why-choose-rentals">
-                <h2>Why Property Owners Choose CleanSpace</h2>
+                <h2>Why Property Owners Choose Pristine & Clean</h2>
                 <div class="benefits-grid">
                     <div class="benefit-item">
                         <i class="fas fa-chart-line"></i>
@@ -328,7 +328,7 @@
         <div class="container">
             <div class="cta-content">
                 <h2>Ready to Boost Your Rental's Success?</h2>
-                <p>Partner with CleanSpace to ensure your vacation rental consistently delivers 5-star experiences. Book our specialized vacation rental cleaning service today.</p>
+                <p>Partner with Pristine & Clean to ensure your vacation rental consistently delivers 5-star experiences. Book our specialized vacation rental cleaning service today.</p>
                 <a href="contact.html" class="btn btn-primary btn-large">
                     <i class="fas fa-home"></i>
                     Book Vacation Rental Cleaning Now
@@ -356,7 +356,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>CleanSpace</h3>
+                    <h3>Pristine & Clean</h3>
                     <p>Professional home cleaning services you can trust. Making homes sparkle since 2014.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -379,7 +379,7 @@
                     <h4>Contact</h4>
                     <ul>
                         <li><i class="fas fa-phone"></i> (555) 123-4567</li>
-                        <li><i class="fas fa-envelope"></i> info@cleanspace.com</li>
+                        <li><i class="fas fa-envelope"></i> info@pristineandclean.com</li>
                         <li><i class="fas fa-map-marker-alt"></i> 123 Clean St, City, State 12345</li>
                     </ul>
                 </div>
@@ -396,7 +396,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2024 CleanSpace. All rights reserved.</p>
+                <p>&copy; 2024 Pristine & Clean. All rights reserved.</p>
             </div>
         </div>
     </footer>
