Major website enhancements: mobile optimization, logo integration, and improved UX

--- a/blog.html
+++ b/blog.html
@@ -53,15 +53,13 @@
 </head>
 <body>
     <!-- Promotional Banner -->
-    <div class="promo-banner">
+    <a href="contact.html" class="promo-banner">
         <div class="banner-container">
             <div class="banner-content">
-                <i class="fas fa-star banner-icon"></i>
                 <span class="banner-text"><strong>First Time Clients:</strong> Get Your Deep Cleaning Service Absolutely FREE!</span>
-                <a href="contact.html" class="banner-cta">Claim Offer</a>
             </div>
         </div>
-    </div>
+    </a>
 
     <!-- Navigation -->
     <nav class="navbar">
