--- a/contact.html
+++ b/contact.html
@@ -67,22 +67,23 @@
 </head>
 <body>
     <!-- Promotional Banner -->
-    <div class="promo-banner">
+    <a href="contact.html" class="promo-banner">
         <div class="banner-container">
             <div class="banner-content">
-                <i class="fas fa-star banner-icon"></i>
-                <span class="banner-text"><strong>First Time Clients:</strong> Get Your Deep Cleaning Service Absolutely FREE!</span>
-                <a href="contact.html" class="banner-cta">Claim Offer</a>
+                <span class="banner-text"><strong>FIRST TIME CLIENTS:</strong> Sign up today for UP TO get 25% OFF!</span>
             </div>
         </div>
-    </div>
+    </a>
 
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <h2><a href="index.html">Pristine & Clean</a></h2>
+                <a href="index.html"><img src="logo.png" alt="Pristine & Clean" class="logo-img"></a>
             </div>
+            
+            <!-- Mobile Menu Backdrop -->
+            <div class="nav-backdrop" id="nav-backdrop"></div>
             
             <!-- Burger Menu -->
             <div class="nav-menu" id="nav-menu">
