Enhanced website UX: larger logo, improved mobile menu, and comprehensive updates
- Increased logo size for better brand visibility (90px desktop, 70px mobile)
- Implemented right-side sliding mobile menu with full service access
- Removed Contact menu item, streamlined navigation to Book Now only
- Added Policy page with detailed company policies including 24hr cancellation
- Updated all service pages: removed pricing, added auto-rotating carousels
- Added deepclean.png and movein.png hero images to respective service pages
- Converted move-in/out process section to interactive slider
- Updated footer across all pages: replaced Services with Policies
- Restyled social icons (blue on white background)
- Fixed mobile carousel speeds and removed carousels on mobile for better UX
- Ensured desktop functionality remains completely unchanged

--- a/deep-cleaning.html
+++ b/deep-cleaning.html
@@ -52,9 +52,6 @@
                     <a href="index.html#testimonials" class="nav-link">Reviews</a>
                 </div>
                 <div class="nav-item">
-                    <a href="contact.html" class="nav-link">Contact</a>
-                </div>
-                <div class="nav-item">
                     <a href="contact.html" class="btn-book-nav">Book Now</a>
                 </div>
             </div>
@@ -90,7 +87,7 @@
                     </div>
                 </div>
                 <div class="service-hero-image">
-                    <img src="https://images.unsplash.com/photo-1581578731548-c64695cc6952?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Deep cleaning service">
+                    <img src="deepclean.png" alt="Deep cleaning service">
                 </div>
             </div>
         </div>
@@ -192,69 +189,70 @@
             <!-- Perfect For Section -->
             <div class="perfect-for-section">
                 <h2>Perfect For</h2>
-                <div class="perfect-for-grid">
-                    <div class="perfect-for-item">
-                        <i class="fas fa-home"></i>
-                        <h4>Moving In/Out</h4>
-                        <p>Start fresh in your new home or leave your old one spotless</p>
-                    </div>
-                    <div class="perfect-for-item">
-                        <i class="fas fa-calendar-alt"></i>
-                        <h4>Seasonal Cleaning</h4>
-                        <p>Spring cleaning or preparing for the holidays</p>
-                    </div>
-                    <div class="perfect-for-item">
-                        <i class="fas fa-hammer"></i>
-                        <h4>Post-Construction</h4>
-                        <p>Clean up after renovations or construction work</p>
-                    </div>
-                    <div class="perfect-for-item">
-                        <i class="fas fa-star"></i>
-                        <h4>Special Events</h4>
-                        <p>Prepare your home for parties or special occasions</p>
+                <div class="perfect-for-carousel-container">
+                    <div class="perfect-for-carousel">
+                        <div class="carousel-item">
+                            <div class="perfect-for-item">
+                                <i class="fas fa-home"></i>
+                                <h4>Moving In/Out</h4>
+                                <p>Start fresh in your new home or leave your old one spotless</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="perfect-for-item">
+                                <i class="fas fa-calendar-alt"></i>
+                                <h4>Seasonal Cleaning</h4>
+                                <p>Spring cleaning or preparing for the holidays</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="perfect-for-item">
+                                <i class="fas fa-hammer"></i>
+                                <h4>Post-Construction</h4>
+                                <p>Clean up after renovations or construction work</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="perfect-for-item">
+                                <i class="fas fa-star"></i>
+                                <h4>Special Events</h4>
+                                <p>Prepare your home for parties or special occasions</p>
+                            </div>
+                        </div>
+                        <!-- Duplicate items for seamless loop -->
+                        <div class="carousel-item">
+                            <div class="perfect-for-item">
+                                <i class="fas fa-home"></i>
+                                <h4>Moving In/Out</h4>
+                                <p>Start fresh in your new home or leave your old one spotless</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="perfect-for-item">
+                                <i class="fas fa-calendar-alt"></i>
+                                <h4>Seasonal Cleaning</h4>
+                                <p>Spring cleaning or preparing for the holidays</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="perfect-for-item">
+                                <i class="fas fa-hammer"></i>
+                                <h4>Post-Construction</h4>
+                                <p>Clean up after renovations or construction work</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="perfect-for-item">
+                                <i class="fas fa-star"></i>
+                                <h4>Special Events</h4>
+                                <p>Prepare your home for parties or special occasions</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <!-- Pricing Section -->
-            <div class="pricing-section">
-                <h2>Deep Cleaning Pricing</h2>
-                <div class="pricing-grid">
-                    <div class="pricing-card">
-                        <h3>1-2 Bedrooms</h3>
-                        <div class="price">$150</div>
-                        <p>Thorough deep clean for smaller spaces</p>
-                        <ul>
-                            <li>Up to 2 bedrooms</li>
-                            <li>2 bathrooms included</li>
-                            <li>Kitchen & living areas</li>
-                            <li>4-5 hours service</li>
-                        </ul>
-                    </div>
-                    <div class="pricing-card featured">
-                        <h3>3-4 Bedrooms</h3>
-                        <div class="price">$250</div>
-                        <p>Complete deep cleaning for family homes</p>
-                        <ul>
-                            <li>Up to 4 bedrooms</li>
-                            <li>3 bathrooms included</li>
-                            <li>Kitchen & living areas</li>
-                            <li>6-7 hours service</li>
-                        </ul>
-                    </div>
-                    <div class="pricing-card">
-                        <h3>5+ Bedrooms</h3>
-                        <div class="price">$380</div>
-                        <p>Comprehensive cleaning for larger homes</p>
-                        <ul>
-                            <li>5+ bedrooms</li>
-                            <li>4+ bathrooms included</li>
-                            <li>All common areas</li>
-                            <li>8+ hours service</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+
         </div>
     </section>
 
@@ -301,12 +299,12 @@
                 </div>
                 
                 <div class="footer-section">
-                    <h4>Services</h4>
+                    <h4>Policies</h4>
                     <ul>
-                        <li><a href="standard-cleaning.html">Standard Cleaning</a></li>
-                        <li><a href="deep-cleaning.html">Deep Cleaning</a></li>
-                        <li><a href="move-in-out-cleaning.html">Move-In/Out</a></li>
-                        <li><a href="vacation-rental-cleaning.html">Vacation Rental</a></li>
+                        <li><a href="policy.html#booking">Booking & Scheduling</a></li>
+                        <li><a href="policy.html#cancellation">Cancellation Policy</a></li>
+                        <li><a href="policy.html#payment">Payment Terms</a></li>
+                        <li><a href="policy.html#quality">Quality Guarantee</a></li>
                     </ul>
                 </div>
                 
