--- a/standard-cleaning.html
+++ b/standard-cleaning.html
@@ -52,9 +52,7 @@
         },
         "offers": {
             "@type": "Offer",
-            "price": "80",
-            "priceCurrency": "USD",
-            "description": "Starting price for standard cleaning service",
+            "description": "Professional standard cleaning service",
             "availability": "https://schema.org/InStock"
         },
         "serviceType": "House Cleaning",
@@ -125,9 +123,6 @@
                 </div>
                 <div class="nav-item">
                     <a href="index.html#testimonials" class="nav-link">Reviews</a>
-                </div>
-                <div class="nav-item">
-                    <a href="contact.html" class="nav-link">Contact</a>
                 </div>
                 <div class="nav-item">
                     <a href="contact.html" class="btn-book-nav">Book Now</a>
@@ -266,69 +261,70 @@
             <!-- Features Section -->
             <div class="service-features-section">
                 <h2>Why Choose Our Standard Cleaning?</h2>
-                <div class="features-grid">
-                    <div class="feature-item">
-                        <i class="fas fa-recycle"></i>
-                        <h4>Eco-Friendly Products</h4>
-                        <p>Safe for your family, pets, and the environment</p>
-                    </div>
-                    <div class="feature-item">
-                        <i class="fas fa-shield-alt"></i>
-                        <h4>Insured & Bonded</h4>
-                        <p>Complete peace of mind with full coverage</p>
-                    </div>
-                    <div class="feature-item">
-                        <i class="fas fa-clock"></i>
-                        <h4>Flexible Scheduling</h4>
-                        <p>Weekly, bi-weekly, or monthly options</p>
-                    </div>
-                    <div class="feature-item">
-                        <i class="fas fa-star"></i>
-                        <h4>Quality Guaranteed</h4>
-                        <p>100% satisfaction or we return for free</p>
+                <div class="features-carousel-container">
+                    <div class="features-carousel">
+                        <div class="carousel-item">
+                            <div class="feature-item">
+                                <i class="fas fa-recycle"></i>
+                                <h4>Eco-Friendly Products</h4>
+                                <p>Safe for your family, pets, and the environment</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="feature-item">
+                                <i class="fas fa-shield-alt"></i>
+                                <h4>Insured & Bonded</h4>
+                                <p>Complete peace of mind with full coverage</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="feature-item">
+                                <i class="fas fa-clock"></i>
+                                <h4>Flexible Scheduling</h4>
+                                <p>Weekly, bi-weekly, or monthly options</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="feature-item">
+                                <i class="fas fa-star"></i>
+                                <h4>Quality Guaranteed</h4>
+                                <p>100% satisfaction or we return for free</p>
+                            </div>
+                        </div>
+                        <!-- Duplicate items for seamless loop -->
+                        <div class="carousel-item">
+                            <div class="feature-item">
+                                <i class="fas fa-recycle"></i>
+                                <h4>Eco-Friendly Products</h4>
+                                <p>Safe for your family, pets, and the environment</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="feature-item">
+                                <i class="fas fa-shield-alt"></i>
+                                <h4>Insured & Bonded</h4>
+                                <p>Complete peace of mind with full coverage</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="feature-item">
+                                <i class="fas fa-clock"></i>
+                                <h4>Flexible Scheduling</h4>
+                                <p>Weekly, bi-weekly, or monthly options</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="feature-item">
+                                <i class="fas fa-star"></i>
+                                <h4>Quality Guaranteed</h4>
+                                <p>100% satisfaction or we return for free</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <!-- Pricing Section -->
-            <div class="pricing-section">
-                <h2>Standard Cleaning Pricing</h2>
-                <div class="pricing-grid">
-                    <div class="pricing-card">
-                        <h3>1-2 Bedrooms</h3>
-                        <div class="price">$80</div>
-                        <p>Perfect for apartments and small homes</p>
-                        <ul>
-                            <li>Up to 2 bedrooms</li>
-                            <li>2 bathrooms included</li>
-                            <li>Kitchen & living areas</li>
-                            <li>2-3 hours service</li>
-                        </ul>
-                    </div>
-                    <div class="pricing-card featured">
-                        <h3>3-4 Bedrooms</h3>
-                        <div class="price">$120</div>
-                        <p>Most popular for family homes</p>
-                        <ul>
-                            <li>Up to 4 bedrooms</li>
-                            <li>3 bathrooms included</li>
-                            <li>Kitchen & living areas</li>
-                            <li>3-4 hours service</li>
-                        </ul>
-                    </div>
-                    <div class="pricing-card">
-                        <h3>5+ Bedrooms</h3>
-                        <div class="price">$180</div>
-                        <p>For larger homes and estates</p>
-                        <ul>
-                            <li>5+ bedrooms</li>
-                            <li>4+ bathrooms included</li>
-                            <li>All common areas</li>
-                            <li>4-5 hours service</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+
         </div>
     </section>
 
@@ -375,12 +371,12 @@
                 </div>
                 
                 <div class="footer-section">
-                    <h4>Services</h4>
+                    <h4>Policies</h4>
                     <ul>
-                        <li><a href="standard-cleaning.html">Standard Cleaning</a></li>
-                        <li><a href="deep-cleaning.html">Deep Cleaning</a></li>
-                        <li><a href="move-in-out-cleaning.html">Move-In/Out</a></li>
-                        <li><a href="vacation-rental-cleaning.html">Vacation Rental</a></li>
+                        <li><a href="policy.html#booking">Booking & Scheduling</a></li>
+                        <li><a href="policy.html#cancellation">Cancellation Policy</a></li>
+                        <li><a href="policy.html#payment">Payment Terms</a></li>
+                        <li><a href="policy.html#quality">Quality Guarantee</a></li>
                     </ul>
                 </div>
                 
