--- a/vacation-rental-cleaning.html
+++ b/vacation-rental-cleaning.html
@@ -52,9 +52,6 @@
                     <a href="index.html#testimonials" class="nav-link">Reviews</a>
                 </div>
                 <div class="nav-item">
-                    <a href="contact.html" class="nav-link">Contact</a>
-                </div>
-                <div class="nav-item">
                     <a href="contact.html" class="btn-book-nav">Book Now</a>
                 </div>
             </div>
@@ -255,72 +252,70 @@
             <!-- Why Choose Us for Rentals -->
             <div class="why-choose-rentals">
                 <h2>Why Property Owners Choose Pristine & Clean</h2>
-                <div class="benefits-grid">
+                <div class="benefits-carousel-container">
+                    <div class="benefits-carousel">
+                        <div class="carousel-item">
                     <div class="benefit-item">
                         <i class="fas fa-chart-line"></i>
                         <h4>Increase Bookings</h4>
                         <p>Consistently clean properties earn better reviews and higher occupancy rates</p>
                     </div>
+                        </div>
+                        <div class="carousel-item">
                     <div class="benefit-item">
                         <i class="fas fa-clock"></i>
                         <h4>Save Time</h4>
                         <p>Focus on guest communication and property management while we handle the cleaning</p>
                     </div>
+                        </div>
+                        <div class="carousel-item">
                     <div class="benefit-item">
                         <i class="fas fa-users"></i>
                         <h4>Reliable Team</h4>
                         <p>Consistent, trained cleaners who understand vacation rental standards</p>
                     </div>
+                        </div>
+                        <div class="carousel-item">
                     <div class="benefit-item">
                         <i class="fas fa-mobile-alt"></i>
                         <h4>Easy Communication</h4>
                         <p>Photo updates, issue reporting, and seamless coordination with your schedule</p>
                     </div>
+                        </div>
+                        <!-- Duplicate items for seamless loop -->
+                        <div class="carousel-item">
+                            <div class="benefit-item">
+                                <i class="fas fa-chart-line"></i>
+                                <h4>Increase Bookings</h4>
+                                <p>Consistently clean properties earn better reviews and higher occupancy rates</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="benefit-item">
+                                <i class="fas fa-clock"></i>
+                                <h4>Save Time</h4>
+                                <p>Focus on guest communication and property management while we handle the cleaning</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="benefit-item">
+                                <i class="fas fa-users"></i>
+                                <h4>Reliable Team</h4>
+                                <p>Consistent, trained cleaners who understand vacation rental standards</p>
+                </div>
+            </div>
+                        <div class="carousel-item">
+                            <div class="benefit-item">
+                                <i class="fas fa-mobile-alt"></i>
+                                <h4>Easy Communication</h4>
+                                <p>Photo updates, issue reporting, and seamless coordination with your schedule</p>
+                    </div>
+                    </div>
+                    </div>
                 </div>
             </div>
 
-            <!-- Pricing Section -->
-            <div class="pricing-section">
-                <h2>Vacation Rental Cleaning Pricing</h2>
-                <div class="pricing-grid">
-                    <div class="pricing-card">
-                        <h3>Studio/1 Bedroom</h3>
-                        <div class="price">$90</div>
-                        <p>Perfect for small vacation rentals</p>
-                        <ul>
-                            <li>Up to 1 bedroom</li>
-                            <li>1 bathroom included</li>
-                            <li>Kitchen & living area</li>
-                            <li>2-3 hours service</li>
-                        </ul>
-                    </div>
-                    <div class="pricing-card featured">
-                        <h3>2-3 Bedrooms</h3>
-                        <div class="price">$130</div>
-                        <p>Most popular for family rentals</p>
-                        <ul>
-                            <li>Up to 3 bedrooms</li>
-                            <li>2 bathrooms included</li>
-                            <li>Kitchen & living areas</li>
-                            <li>3-4 hours service</li>
-                        </ul>
-                    </div>
-                    <div class="pricing-card">
-                        <h3>4+ Bedrooms</h3>
-                        <div class="price">$180</div>
-                        <p>For larger vacation properties</p>
-                        <ul>
-                            <li>4+ bedrooms</li>
-                            <li>3+ bathrooms included</li>
-                            <li>All common areas</li>
-                            <li>4-5 hours service</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="pricing-note">
-                    <p><i class="fas fa-info-circle"></i> Volume discounts available for multiple properties. Same-day turnovers may include additional fees.</p>
-                </div>
-            </div>
+
         </div>
     </section>
 
@@ -367,12 +362,12 @@
                 </div>
                 
                 <div class="footer-section">
-                    <h4>Services</h4>
+                    <h4>Policies</h4>
                     <ul>
-                        <li><a href="standard-cleaning.html">Standard Cleaning</a></li>
-                        <li><a href="deep-cleaning.html">Deep Cleaning</a></li>
-                        <li><a href="move-in-out-cleaning.html">Move-In/Out</a></li>
-                        <li><a href="vacation-rental-cleaning.html">Vacation Rental</a></li>
+                        <li><a href="policy.html#booking">Booking & Scheduling</a></li>
+                        <li><a href="policy.html#cancellation">Cancellation Policy</a></li>
+                        <li><a href="policy.html#payment">Payment Terms</a></li>
+                        <li><a href="policy.html#quality">Quality Guarantee</a></li>
                     </ul>
                 </div>
                 
