--- a/blog-drain-cleaning.html
+++ b/blog-drain-cleaning.html
@@ -75,9 +75,6 @@
                     <a href="index.html#testimonials" class="nav-link">Reviews</a>
                 </div>
                 <div class="nav-item">
-                    <a href="contact.html" class="nav-link">Contact</a>
-                </div>
-                <div class="nav-item">
                     <a href="contact.html" class="btn-book-nav">Book Now</a>
                 </div>
             </div>
@@ -361,12 +358,12 @@
                 </div>
                 
                 <div class="footer-section">
-                    <h4>Services</h4>
+                    <h4>Policies</h4>
                     <ul>
-                        <li><a href="standard-cleaning.html">Standard Cleaning</a></li>
-                        <li><a href="deep-cleaning.html">Deep Cleaning</a></li>
-                        <li><a href="move-in-out-cleaning.html">Move-In/Out</a></li>
-                        <li><a href="vacation-rental-cleaning.html">Vacation Rental</a></li>
+                        <li><a href="policy.html#booking">Booking & Scheduling</a></li>
+                        <li><a href="policy.html#cancellation">Cancellation Policy</a></li>
+                        <li><a href="policy.html#payment">Payment Terms</a></li>
+                        <li><a href="policy.html#quality">Quality Guarantee</a></li>
                     </ul>
                 </div>
                 
