--- a/move-in-out-cleaning.html
+++ b/move-in-out-cleaning.html
@@ -52,9 +52,6 @@
                     <a href="index.html#testimonials" class="nav-link">Reviews</a>
                 </div>
                 <div class="nav-item">
-                    <a href="contact.html" class="nav-link">Contact</a>
-                </div>
-                <div class="nav-item">
                     <a href="contact.html" class="btn-book-nav">Book Now</a>
                 </div>
             </div>
@@ -90,7 +87,7 @@
                     </div>
                 </div>
                 <div class="service-hero-image">
-                    <img src="https://images.unsplash.com/photo-1560185127-6ed189bf02f4?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Move-in move-out cleaning">
+                    <img src="movein.png" alt="Move-in move-out cleaning">
                 </div>
             </div>
         </div>
@@ -195,52 +192,35 @@
                 </div>
             </div>
 
-            <!-- Perfect For Section -->
-            <div class="perfect-for-section">
-                <h2>Perfect For</h2>
-                <div class="perfect-for-grid">
-                    <div class="perfect-for-item">
-                        <i class="fas fa-key"></i>
-                        <h4>New Homeowners</h4>
-                        <p>Start fresh in your new home with professional cleaning</p>
-                    </div>
-                    <div class="perfect-for-item">
-                        <i class="fas fa-handshake"></i>
-                        <h4>Rental Properties</h4>
-                        <p>Prepare rental units for new tenants</p>
-                    </div>
-                    <div class="perfect-for-item">
-                        <i class="fas fa-dollar-sign"></i>
-                        <h4>Security Deposits</h4>
-                        <p>Maximize your chances of getting your full deposit back</p>
-                    </div>
-                    <div class="perfect-for-item">
-                        <i class="fas fa-hammer"></i>
-                        <h4>Post-Construction</h4>
-                        <p>Clean up after renovations or construction work</p>
-                    </div>
-                </div>
-            </div>
+
 
             <!-- Process Section -->
             <div class="process-section">
                 <h2>Our Moving Cleaning Process</h2>
-                <div class="process-steps">
+                <div class="process-slider-container">
+                    <div class="process-slider" id="processSlider">
+                        <div class="process-slide active">
                     <div class="process-step">
                         <div class="step-number">1</div>
                         <h4>Free Walkthrough</h4>
                         <p>We assess the property and provide a detailed quote based on the specific cleaning needs.</p>
                     </div>
+                        </div>
+                        <div class="process-slide">
                     <div class="process-step">
                         <div class="step-number">2</div>
                         <h4>Flexible Scheduling</h4>
                         <p>We work around your moving schedule, including weekends and evenings when needed.</p>
                     </div>
+                        </div>
+                        <div class="process-slide">
                     <div class="process-step">
                         <div class="step-number">3</div>
                         <h4>Deep Cleaning</h4>
                         <p>Our team performs comprehensive cleaning of the empty property from top to bottom.</p>
                     </div>
+                        </div>
+                        <div class="process-slide">
                     <div class="process-step">
                         <div class="step-number">4</div>
                         <h4>Final Inspection</h4>
@@ -248,49 +228,24 @@
                     </div>
                 </div>
             </div>
-
-            <!-- Pricing Section -->
-            <div class="pricing-section">
-                <h2>Move-In/Out Cleaning Pricing</h2>
-                <div class="pricing-grid">
-                    <div class="pricing-card">
-                        <h3>1-2 Bedrooms</h3>
-                        <div class="price">$200</div>
-                        <p>Complete cleaning for smaller properties</p>
-                        <ul>
-                            <li>Up to 2 bedrooms</li>
-                            <li>2 bathrooms included</li>
-                            <li>Kitchen & living areas</li>
-                            <li>4-5 hours service</li>
-                        </ul>
+                    <div class="slider-navigation">
+                        <button class="slider-btn prev-btn" onclick="moveSlide(-1)">
+                            <i class="fas fa-chevron-left"></i>
+                        </button>
+                        <div class="slider-dots">
+                            <span class="dot active" onclick="currentSlide(1)"></span>
+                            <span class="dot" onclick="currentSlide(2)"></span>
+                            <span class="dot" onclick="currentSlide(3)"></span>
+                            <span class="dot" onclick="currentSlide(4)"></span>
                     </div>
-                    <div class="pricing-card featured">
-                        <h3>3-4 Bedrooms</h3>
-                        <div class="price">$320</div>
-                        <p>Comprehensive cleaning for family homes</p>
-                        <ul>
-                            <li>Up to 4 bedrooms</li>
-                            <li>3 bathrooms included</li>
-                            <li>Kitchen & living areas</li>
-                            <li>5-6 hours service</li>
-                        </ul>
+                        <button class="slider-btn next-btn" onclick="moveSlide(1)">
+                            <i class="fas fa-chevron-right"></i>
+                        </button>
                     </div>
-                    <div class="pricing-card">
-                        <h3>5+ Bedrooms</h3>
-                        <div class="price">$480</div>
-                        <p>Complete cleaning for larger properties</p>
-                        <ul>
-                            <li>5+ bedrooms</li>
-                            <li>4+ bathrooms included</li>
-                            <li>All common areas</li>
-                            <li>6-8 hours service</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="pricing-note">
-                    <p><i class="fas fa-info-circle"></i> Additional services like carpet cleaning, garage cleaning, or post-construction cleanup available for additional fees.</p>
                 </div>
             </div>
+
+
         </div>
     </section>
 
@@ -337,12 +292,12 @@
                 </div>
                 
                 <div class="footer-section">
-                    <h4>Services</h4>
+                    <h4>Policies</h4>
                     <ul>
-                        <li><a href="standard-cleaning.html">Standard Cleaning</a></li>
-                        <li><a href="deep-cleaning.html">Deep Cleaning</a></li>
-                        <li><a href="move-in-out-cleaning.html">Move-In/Out</a></li>
-                        <li><a href="vacation-rental-cleaning.html">Vacation Rental</a></li>
+                        <li><a href="policy.html#booking">Booking & Scheduling</a></li>
+                        <li><a href="policy.html#cancellation">Cancellation Policy</a></li>
+                        <li><a href="policy.html#payment">Payment Terms</a></li>
+                        <li><a href="policy.html#quality">Quality Guarantee</a></li>
                     </ul>
                 </div>
                 
